test/static/wrong/case5a.kk.out
test/static/wrong/case5a.kk(5,15): error: type aInt should be cased as aint